# Speech-quality-analysis

./: .gitignore  README.md  additional-pronunciation-datasets.json  alignment-and-lexicon-resources.json  american-corpora-availability.json  data-harvesting-plan.md  forced-alignment-tools.json  l2-arctic-availability.json  native-english-reference-datasets.json  official-native-corpora-pages.json  pronunciation-assessment-projects.json  pronunciation-datasets-search.json  pronunciation-datasets.json  pyproject.toml  speech-backbones-pronunciation.json
docs/: api_contract.md  dataset_ingestion.md  feature_precompute_pipeline.md  resources.md  scorer_architecture.md  scoring_head.md  training_artifacts.md
scripts/: run_mfa_parallel_align.sh
src/pronunciation_backend/: __init__.py  config.py  main.py  models.py
src/pronunciation_backend/resources/: en_us_words.json  reference_audio_manifest.json
src/pronunciation_backend/services/: __init__.py  aligner.py  audio_prep.py  feature_encoder.py  lexicon.py  pipeline.py  reference.py  scoring.py
src/pronunciation_backend/training/: __init__.py  acoustic_encoder_v2.py  bake_mmap_to_parquet.py  build_libritts_aligned.py  build_speechocean762_aligned.py  cmudict_utils.py  dataset.py  eval_scorer_checkpoint.py  eval_scorer_v2_checkpoint.py  feature_store.py  mmap_dataset.py  pack_mmap_features.py  parquet_dataset.py  precompute_features.py  prepare_libritts.py  prepare_speechocean762.py  prepare_speechocean762_mfa.py  pretrain_acoustic_encoder_v2.py  schemas.py  scorer_model.py  scorer_model_v2.py  (+6 more)
tests/: test_acoustic_encoder_v2.py  test_api.py  test_eval_scorer_checkpoint.py  test_eval_scorer_v2_checkpoint.py  test_pretrain_acoustic_encoder_v2.py  test_scorer_model_v2.py  test_scoring_targets.py  test_train_scorer_v2.py  test_training_mmap_dataset.py  test_training_speechocean762.py  test_training_train_scorer.py  test_verify_precomputed_features.py
