[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pronunciation-backend"
version = "0.1.0"
description = "Backend MVP for word-level American English pronunciation assessment."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "numpy>=1.26.0",
  "soundfile>=0.12.1",
  "python-multipart>=0.0.9",
]

[project.optional-dependencies]
ml = [
  "torch>=2.3.0",
  "transformers>=4.44.0",
]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.2.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
